# protohacke-rs

./: .rustfmt.toml  Cargo.toml  readme.org
src/: budget_chat.rs  main.rs  means_client.py  means_to_an_end.rs  mob_in_the_middle.rs  primetime.rs  scratch.rs  smoketest.rs  unusual_db.rs
src/speed_daemon/: client.py  message.rs  mod.rs  server.rs
